--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
@@ -34,11 +35,20 @@ jobs:
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
-    - name: BuildDockerImage
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-    - name: Publish to Docker Repository
-      uses: elgohr/Publish-Docker-Github-Action@master
+    # - name: BuildDockerImage
+    #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    # login to ACR
+    - name: Login to Aliyun Container Registry (ACR)
+      uses: aliyun/acr-login@v1 # 使用阿里云镜像服务action
       with:
-        name: christopherchen/practice:practice
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        login-server: registry.cn-hangzhou.aliyuncs.com # 务必正确填写镜像容器服务的登录地址
+        region-id: cn-hangzhou # 务必正确填写镜像容器服务的登录地址
+        username: ${{ secrets.ALI_REPO }}
+        password: ${{ secrets.ALI_REPO_PWD }}
+    # build image and push to ACR
+    - name: Build and Push Docker Image
+      env:
+        IMAGE_TAG: latest # 用于标记容器版本号
+      run: |
+        docker build -t registry.cn-hangzhou.aliyuncs.com/dylan-ryan/dylan-app:$IMAGE_TAG .
+        docker push registry.cn-hangzhou.aliyuncs.com/dylan-ryan/dylan-app:$IMAGE_TAG
