--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,11 +8,23 @@
 
 name: Java CI with Maven
 
+# on:
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     branches: [ "main" ]
+
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  # 手动触发事件
+  workflow_dispatch:
+    inputs:
+      # logLevel:
+      #   description: 'Log level'
+      #   required: true
+      #   default: 'warning'
+      tags:
+        description: 'Docker tags'
+        default: 'latest'
 
 jobs:
   build:
@@ -48,7 +60,7 @@ jobs:
     # build image and push to ACR
     - name: Build and Push Docker Image
       env:
-        IMAGE_TAG: latest # 用于标记容器版本号
+        IMAGE_TAG: ${{ github.event.inputs.tags }} # 用于标记容器版本号
       run: |
         docker build -t registry.cn-hangzhou.aliyuncs.com/dylan-ryan/dylan-app:$IMAGE_TAG .
         docker push registry.cn-hangzhou.aliyuncs.com/dylan-ryan/dylan-app:$IMAGE_TAG
