--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -7,7 +7,7 @@ ruoyi:
   # 版权年份
   copyrightYear: 2023
   # 文件路径 示例（ Windows配置D:/ruoyi/uploadPath，Linux配置 /home/ruoyi/uploadPath）
-  profile: D:/ruoyi/uploadPath
+  profile: ${PROFILE}
   # 获取ip地址开关
   addressEnabled: false
   # 验证码类型 math 数组计算 char 字符验证
@@ -72,13 +72,13 @@ spring:
     # redis 配置
     redis:
       # 地址
-      host: localhost
+      host: ${RD_HOST}
       # 端口，默认为6379
-      port: 6379
+      port: ${RD_PORT}
       # 数据库索引
-      database: 0
+      database: ${RD_COL}
       # 密码
-      password:
+      password: ${RD_PWD}
       # 连接超时时间
       timeout: 10s
       lettuce:
