--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -156,6 +156,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jeecgframework.jimureport</groupId>
+            <artifactId>jimureport-spring-boot3-starter-fastjson2</artifactId>
+            <version>1.7.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
         </dependency>
